--- a/index.html
+++ b/index.html
@@ -7,10 +7,36 @@
 </head>
 <body>
     <form>
+        <fieldset>
+            <legend>Personal Information:</legend>
     <labelirst for="fname">First namme:</label><br>     
-    <input type="text" id="firstname" name="firstname"> <br>
+    <input type="text" id="firstname" name="firstname" value="Festa" readonly> <br>
     <label for="lastname">Last name:</label><br>
-    <input type="text" id="lastname" name="lastname"><br>
+    <input type="text" id="lastname" name="lastname" disabled><br>
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email"><br>
+    <label for="password">Password:</label><br>
+    <input type="password" id="password" name="password" size="40" placeholder="Password"><br><br>
+    <label>Gender:</label><br>
+    <input type="radio" id="male" name="gender" value="male">
+    <label for="male"> Male</label><br>
+    <input type="radio" id="female" name="gender" value="female">
+    <label for="female">Female</label><br><br>
+    <label>Hobbies:</label><br>
+    <input type="checkbox" id="gaming" name="gaming" value="Gaming">
+    <label for="gaming">Gaming</label><br>
+    <input type="checkbox" id="football" name="football" value="Football">
+    <label for="football">Football</label><br>
+    <input type="checkbox" id="swimming" name="swimming" value="Swimming">
+    <label for="swimming">Swimming</label><br><br>
+    <select id="pet" name="pet">
+        <option value="Dog">Dog</option>
+        <option value="Cat">Cat</option>
+        <option value="parrot">Parrot</option>
+     </select><br><br>
+     <textarea name="message" rows="10" cols="20" maxlength="50"></textarea><br><br>
+    <input type="submit" id="submit" name="submit"> <br>
+    </fieldset>
     </form>
     
 </body>
